# btest-opensource

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  data.txt  data.yml  frame_details.txt  server_udp_packet_hex_data.txt  tcp_for_udp_communication.txt
RouterOs-Swarm/: Dockerfile  haproxy.cfg
RouterOs-btest-swarm/: docker-compose.yml
go_version/: go.mod  go.sum  main.go  main_test.go
rust_version(archived)/src/: constants.rs  main.rs
src/: constants.rs  main.rs  utils.rs
