# Cargo.toml
[workspace]

[package]
name = "btest-server"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ispapp/btest-server"
authors = ["Abdelkarim O.", "KMOZ000 <abdelkarim@ispapp.co>"]
documentation = "https://docs.rs/btest-opensource"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
getopts = "0.2.21"
crypto = "0.5.1"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
hex = "0.4.2"
smoltcp = "0.11.0"
md5 = "0.7.0"
dotenv = "0.15.0"
subtle = "2.5.0"
[profile.dev]
strip = "none"
[profile.release]
strip = "symbols"
